# twitch-tts

./: .editorconfig  .gitignore  README.md  conf.py  config_example.jsonc  config_example.py  google_translate.py  gui.spec  make-release.ps1  pyproject.toml  release-build.ps1  release-upload.ps1  run.py  run.spec  yt.py
.github/workflows/: release.yml
src/twitch_tts/: _build_version.py  conf.py  constants.py  google_translate.py  gui.py  gui_qt.py  gui_run.py  run.py  versioning.py  yt.py
tests/: test_language_combo.py  test_versioning.py
