[tool.poetry]
name = "twitch-tts"
version = "1.0.0"
description = ""
authors = ["Zutatensuppe <oo.para@gmail.com>"]

[tool.poetry.dependencies]
deepl-translate = "^1.2.0"
gTTS = "^2.2.3"
python = "^3.10,<3.11"
requests = "^2.27.1"
twitchio = "^2.1.4"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pyinstaller = "^6.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
