[project]
name = "twitch-tts"
version = "1.3.0"
description = ""
authors = [{ name = "Zutatensuppe", email = "oo.para@gmail.com" }]
requires-python = ">=3.10,<4,<3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "deepl-translate>=1.2.0,<2",
    "gTTS>=2.2.3,<3",
    "requests>=2.27.1,<3",
    "twitchio>=2.1.4,<3",
    "pygame>=2.1.2,<3",
    "pyinstaller>=6.9.0,<7",
    "commentjson>=0.9.0,<0.10",
    "pytchat>=0.5.5,<0.6",
    "google-api-python-client>=2.166.0,<3",
    "pyside6>=6.10.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.9.0,<7",
    "black>=24.4.2,<25",
]

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"
